@@ -1,15 +1,0 @@
-<slice>
-  <name>libcloud-test</name>
-  <image-id type="integer">10</image-id>
-  <addresses type="array">
-    <address>174.143.212.229</address>
-    <address>10.176.164.199</address>
-  </addresses>
-  <progress type="integer">100</progress>
-  <id type="integer">70507</id>
-  <bw-out type="float">0.0</bw-out>
-  <bw-in type="float">0.0</bw-in>
-  <flavor-id type="integer">1</flavor-id>
-  <status>reboot</status>
-  <ip-address>174.143.212.229</ip-address>
-</slice>
