@@ -1,3 +1,0 @@
-<errors>
-  <error>Permission denied</error>
-</errors>
