@@ -1,4 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<errors>
-  <error>Slice parameters are not properly nested</error>
-</errors>
